--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>sustentabilidade</h1>
 
-  <img src="Pastel Illustrated Sustainability habits Infographic.png"
+  <h1 align="center"> <img src="Pastel Illustrated Sustainability habits Infographic.png"</h1>
     
 
 
